--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,9 +7,10 @@
     <div class="py-24 sm:py-32 lg:pb-40">
       <div class="mx-auto max-w-7xl px-6 lg:px-8">
         <div class="mx-auto max-w-2xl text-center">
-          <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">{{ .Site.Params.moto }}</h1>
-          <p class="mt-6 text-lg leading-8 text-gray-300">{{ .Site.Params.description }}</p>
-          <div class="mt-10 flex items-center justify-center gap-x-6">
+          <h1 class="text-6xl font-bold tracking-tight text-indigo-500 sm:text-4xl">{{ .Site.Params.moto }}</h1>
+          <h1 class="text-[170px] font-bold tracking-tight text-white sm:text-[150px]">{{ .Site.Params.moto_bigword }}</h1>
+          <p class="leading-1 my-16 text-lg leading-8 text-gray-300">{{ .Site.Params.description }}</p>
+          <div class="my-30 flex items-center justify-center gap-x-6">
             <a href="{{ .Site.Params.cta.url }}" class="rounded-md bg-indigo-500 px-4 py-3 text-xl font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-400">{{ .Site.Params.cta.text }}</a>
             <a href="/offer" class="text-xl font-semibold leading-6 text-white">Learn more <span aria-hidden="true">→</span></a>
           </div>
@@ -27,8 +28,8 @@
     </div>
   </div>
   <div class="flex justify-center flex-col items-center space-y-8">
-    <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl mx-auto text-center">Content Managment System for developers</h1>
-    <p class="tracking-tight font-thin text-sm text-gray-300 mx-auto"><span class="underline-offset-4 underline">Reviews from our customers</span> 👇</p>
+    <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl mx-auto text-center">Creators you can trust</h1>
+    <p class="tracking-tight font-thin text-2xl text-indigo-500 mx-auto"><span class="underline-offset-4 underline">Reviews from our customers</span> 👇</p>
   </div>
   <section class="bg-gray-900 py-24 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
