--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,14 +1,19 @@
 <div class="flex flex-col justify-center items-center pb-24 font-bold text-black-600 text-xl w-100 space-y-4 z-50">
-  <div class="flex justfy-center space-x-3">
-    <a href="/" class="hover:underline hover:text-black-600">Home</a>
+  <div class="flex justfy-center space-x-3 mb-4 mt-10">
+    <a href="/" class="hover:underline hover:text-black-600 uppercase">Home</a>
     <div>|</div>
-    <a href="/about" class="hover:underline hover:text-black-600">About</a>
+    <a href="/about" class="hover:underline hover:text-black-600 uppercase">Company</a>
     <div>|</div>
-    <a href="/posts" class="hover:underline hover:text-black-600">Blog</a>
+    <a href="/posts" class="hover:underline hover:text-black-600 uppercase">Blog</a>
+    <div>|</div>
+    <a href="/portfolio" class="hover:underline hover:text-black-600 uppercase">Portfolio</a>
   </div>
-  <div class="font-normal text-sm">
-    Made by
-    <a href="{{ .Site.Params.footer.social_url }}" target="_blank" class="font-extrabold hover:underline hover:text-black-600">{{ .Site.Params.footer.social_username }}</a>
-    with ❤️
+  <div class="flex flex-row space-x-4 font-bold text-sm">
+  <div class="mr-5">
+    INSPIRE<span class="text-indigo-500">.</span> CREATE<span class="text-indigo-500">.</span> WIN<span class="text-indigo-500">.</span>
+  </div>
+  <div>
+    INPACTIVE <span class="text-indigo-500">2024</span>
+  </div>
   </div>
 </div>
